<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/hide_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/show_btn"
        android:layout_alignBottom="@+id/show_btn"
        android:layout_alignParentRight="true"
        android:layout_marginRight="36dp"
        android:text="@string/hide_all_str" />

    <ImageView
        android:id="@+id/h_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/s_img"
        android:layout_alignTop="@+id/s_img"
        android:layout_toLeftOf="@+id/d_img"
        android:layout_toRightOf="@+id/s_img"
        android:src="@drawable/heart_pic" />

    <ImageView
        android:id="@+id/s_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:src="@drawable/spade_pic" />

    <CheckBox
        android:id="@+id/h_chbx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/s_chbx"
        android:layout_below="@+id/s_chbx"
        android:text="@string/h_str" />

    <CheckBox
        android:id="@+id/d_chbx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/s_chbx"
        android:layout_below="@+id/h_chbx"
        android:text="@string/d_str" />

    <CheckBox
        android:id="@+id/c_chbx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/s_chbx"
        android:layout_below="@+id/d_chbx"
        android:text="@string/c_str" />

    <ImageView
        android:id="@+id/d_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/h_img"
        android:layout_marginRight="22dp"
        android:layout_toLeftOf="@+id/c_img"
        android:src="@drawable/diamd_pic" />

    <CheckBox
        android:id="@+id/s_chbx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/s_img"
        android:layout_centerVertical="true"
        android:text="@string/s_str" />

    <ImageView
        android:id="@+id/c_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/d_img"
        android:layout_marginRight="23dp"
        android:src="@drawable/clubs_pic" />

    <Button
        android:id="@+id/show_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/d_chbx"
        android:layout_below="@+id/c_chbx"
        android:layout_marginTop="33dp"
        android:text="@string/show_all_str" />

</RelativeLayout>